Modified for display server based on iotsa board (in stead of old ESP-201 board)

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = .
+env_default = nodemcuv2
 
 [env:nodemcuv2]
 platform = espressif8266
@@ -17,4 +18,14 @@ build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
 lib_deps = iotsa
 monitor_baud = 115200
+; upload_port = m369clock.local
+
+[env:esp201]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+lib_deps = iotsa
+; monitor_baud = 115200
+monitor_baud = 76800
+upload_speed = 28800
 ; upload_port = m369clock.local
