Another try: reference iotsa library by URL, hope that gets most recent version

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,19 +17,7 @@ board = nodemcuv2
 build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
 lib_deps = 
-    iotsa@>=1.4
+    https://github.com/cwi-dis/iotsa.git
     LiquidCrystal
 monitor_baud = 115200
-upload_port = display.local
-
-[env:esp201]
-platform = espressif8266
-board = esp01_1m
-framework = arduino
-lib_deps = 
-    iotsa@>=1.4
-    LiquidCrystal
-; monitor_baud = 115200
-monitor_baud = 76800
-upload_speed = 28800
-; upload_port = m369clock.local
+; upload_port = display.local
