--- a/platformio.ini
+++ b/platformio.ini
@@ -10,14 +10,25 @@
 [platformio]
 src_dir = .
 env_default = nodemcuv2
+; env_default = esp32thing
 
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
+lib_ldf_mode = chain+
 lib_deps = 
     https://github.com/cwi-dis/iotsa.git
     LiquidCrystal
 monitor_baud = 115200
 ; upload_port = display.local
+
+[env:esp32thing]
+platform = espressif32
+board = esp32thing
+framework = arduino
+lib_ldf_mode = deep+
+lib_deps = 
+    /Users/jack/src/dis-git/iotsa
+    LiquidCrystal
