esp8266 also needs deep+ ldf mode

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ platform = espressif8266
 board = nodemcuv2
 build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
-lib_ldf_mode = chain+
+lib_ldf_mode = deep+
 lib_deps = 
     https://github.com/cwi-dis/iotsa.git
     LiquidCrystal
@@ -30,5 +30,5 @@ board = esp32thing
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps = 
-    /Users/jack/src/dis-git/iotsa
+    https://github.com/cwi-dis/iotsa.git
     LiquidCrystal
