--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,13 @@ env_default = nodemcuv2
 ; env_default = esp32thing
 
 [env:nodemcuv2]
-platform = espressif8266
+platform = espressif8266@~1.6
 board = nodemcuv2
 build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps = 
-    https://github.com/cwi-dis/iotsa.git
+    iotsa@~1.8
     LiquidCrystal
 monitor_baud = 115200
 ; upload_port = display.local
