--- a/platformio.ini
+++ b/platformio.ini
@@ -19,8 +19,11 @@ build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps = 
-    iotsa@~1.8.1
-    LiquidCrystal
+   https://github.com/cwi-dis/iotsa.git#exp-coap
+   LiquidCrystal
+;lib_deps = 
+;    file:///Users/jack/src/dis-git/iotsa
+;    LiquidCrystal
 monitor_baud = 115200
 ; upload_port = display.local
 
