--- a/platformio.ini
+++ b/platformio.ini
@@ -15,15 +15,15 @@ env_default = nodemcuv2
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
-build_flags = -Wl,-Teagle.flash.4m.ld -DIOTSA_WITH_HTTPS -DIOTSA_WITHOUT_HTTP -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_PORT=Serial
+build_flags = -Wl,-Teagle.flash.4m.ld -DIOTSA_WITH_HTTPS
 framework = arduino
 lib_ldf_mode = deep+
-;lib_deps = 
-;   https://github.com/cwi-dis/iotsa.git#exp-coap
-;   LiquidCrystal
 lib_deps = 
-    file:///Users/jack/src/dis-git/iotsa
-    LiquidCrystal
+   https://github.com/cwi-dis/iotsa.git
+   LiquidCrystal
+;lib_deps = 
+;    file:///Users/jack/src/dis-git/iotsa
+;    LiquidCrystal
 monitor_baud = 115200
 ; upload_port = display.local
 
