--- a/platformio.ini
+++ b/platformio.ini
@@ -9,29 +9,30 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = .
-env_default = nodemcuv2
-; env_default = esp32thing
+; env_default = nodemcuv2
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
-build_flags = -Wl,-Teagle.flash.4m3m.ld -DIOTSA_WITH_HTTPS
+[common]
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps = 
    https://github.com/cwi-dis/iotsa.git
    LiquidCrystal
-;lib_deps = 
-;    file:///Users/jack/src/dis-git/iotsa
-;    LiquidCrystal
-monitor_baud = 115200
-; upload_port = display.local
+build_flags = -DIOTSA_WITH_HTTPS
+monitor_speed = 115200
+
+[esp8266]
+extends = common
+platform = espressif8266
+lib_ignore = esp32_https_server_compat
+
+[esp32]
+extends = common
+platform = espressif32
+
+[env:nodemcuv2]
+extends = esp8266
+board = nodemcuv2
 
 [env:esp32thing]
-platform = espressif32
+extends = esp32
 board = esp32thing
-framework = arduino
-lib_ldf_mode = deep+
-lib_deps = 
-    https://github.com/cwi-dis/iotsa.git
-    LiquidCrystal
