Allow PUT as well as POST for setting messages. The semantics are a bit of both, unfortunately.

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = .
-; env_default = nodemcuv2
+env_default = nodemcuv2
 
 [common]
 framework = arduino
@@ -17,7 +17,7 @@ lib_ldf_mode = deep+
 lib_deps = 
    https://github.com/cwi-dis/iotsa.git
    LiquidCrystal
-build_flags = -DIOTSA_WITH_HTTPS
+; build_flags = -DIOTSA_WITH_HTTPS
 monitor_speed = 115200
 
 [esp8266]
