Adapted for github actions ci/cd

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ env_default = nodemcuv2
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps = 
-   https://github.com/cwi-dis/iotsa.git
+   iotsa
    LiquidCrystal
 ; build_flags = -DIOTSA_WITH_HTTPS
 monitor_speed = 115200
