Use board_build.ldscript

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,12 +17,15 @@ lib_ldf_mode = deep+
 lib_deps = 
    iotsa
    LiquidCrystal
+build_flags =
 ; build_flags = -DIOTSA_WITH_HTTPS
 monitor_speed = 115200
 
 [esp8266]
 extends = common
 platform = espressif8266
+board_build.ldscript = eagle.flash.4m3m.ld
+build_flags = ${common.build_flags}
 lib_ignore = esp32_https_server_compat
 
 [esp32]
