--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,9 @@ env_default = nodemcuv2
 [common]
 framework = arduino
 lib_ldf_mode = deep+
+lib_compat_mode = strict
 lib_deps = 
-   iotsa
+   https://github.com/cwi-dis/iotsa.git#develop
    LiquidCrystal
 build_flags =
 ; build_flags = -DIOTSA_WITH_HTTPS
@@ -26,7 +27,6 @@ extends = common
 platform = espressif8266
 board_build.ldscript = eagle.flash.4m3m.ld
 build_flags = ${common.build_flags}
-lib_ignore = esp32_https_server_compat
 
 [esp32]
 extends = common
