--- a/.github/workflows/build-platformio.yml
+++ b/.github/workflows/build-platformio.yml
@@ -15,7 +15,7 @@ on:
       iotsa_ref:
         description: 'iotsa branch, ref or sha'
         required: true
-        detault: develop
+        default: develop
   
 env:
   iotsa_ref: develop
@@ -29,7 +29,10 @@ jobs:
         board:
         - nodemcuv2
         - esp32thing
+        variant: [""]
         build_flags: [""]
+        board_build_flags: [""]
+        pio_extra_args: [""]
 
     steps:
     - name: Set env
@@ -79,9 +82,12 @@ jobs:
     - name: Run PlatformIO
       run: |
         pio run --environment ${{ matrix.board }}
-
+      env:
+        PLATFORMIO_BUILD_FLAGS: ${{ matrix.build_flags }} ${{ matrix.board_build_flags }}
+        IOTSA_CONFIG_PROGRAM_NAME: ${{ env.this_product }}-${{ matrix.variant }}${{ matrix.board }}
+        
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.this_product }}-${{ matrix.board }}-${{ env.iotsa_ref }}.bin
+        name: ${{ env.this_product }}--${{ matrix.variant }}${{ matrix.board }}.bin
         path: .pio/build/${{ matrix.board }}/firmware.bin
