--- a/platformio.ini
+++ b/platformio.ini
@@ -31,6 +31,7 @@ build_flags = ${common.build_flags}
 [esp32]
 extends = common
 platform = espressif32
+board_build.partitions = min_spiffs.csv
 
 [env:nodemcuv2]
 extends = esp8266
