Changes for getFromRequest(), github actions.

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,9 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = .
-env_default = nodemcuv2
+default_envs = 
+   nodemcuv2
+   esp32thing
 
 [common]
 framework = arduino
